python modules searched in the right directory

--- a/scripts/Makefile.am
+++ b/scripts/Makefile.am
@@ -28,7 +28,8 @@ EXTRA_DIST = getalign.py.in mapping.py.in extractbackground.py.in\
 
 do_subst = $(SED) -e 's,[@]PYTHON[@],$(PYTHON),g'\
 		       -e 's,[@]pythondir[@],$(pythondir),g'\
-               -e 's,[@]pkgdatadir[@],$(pkgdatadir),g'
+               -e 's,[@]pkgdatadir[@],$(pkgdatadir),g'\
+               -e 's,[@]pkgexecdir[@],$(pkgexecdir),g'
 
 getalign: getalign.py.in
 	$(do_subst) < $< > $@
