python library install dir corrected

--- a/scripts/getalign.py.in
+++ b/scripts/getalign.py.in
@@ -100,20 +100,26 @@ def message(messagestr):
 def checkexist(filename, md5sum):
     try:
         h = hashlib.md5()
-        with open(filename) as file:
-            chunk = ' '
-            while chunk:
-                chunk = file.read(32768)
-                h.update(chunk)
-        if h.hexdigest() == md5sum:
+        if filename[-4:] != ".emf":
+            with open(filename) as file:
+                chunk = ' '
+                while chunk:
+                    chunk = file.read(32768)
+                    h.update(chunk)
+            if h.hexdigest() == md5sum:
+                print ('File {0} is already present.                    \r'
+                       .format(filename)), 
+                sys.stdout.flush()
+                return True
+            else:
+                print ('File {0} is present but seems to be corrupted. '
+                       'Re-downloading it.').format(filename)
+                return False
+        else:
             print ('File {0} is already present.                    \r'
                    .format(filename)), 
             sys.stdout.flush()
             return True
-        else:
-            print ('File {0} is present but seems to be corrupted. '
-                   'Re-downloading it.').format(filename)
-            return False
     except IOError as e:
         return False
 
@@ -289,7 +295,7 @@ if args.species == 'eutherian':
             ifile += 1
 
     message('Converting EMF files to fasta...')
-    sys.path.append("@pythonexecdir@")
+    sys.path.append("@pyexecdir@")
     import emf2fasta
     for emff in glob.glob('*.emf'):
         emf2fasta.emf2fasta(emff)
