--- a/scripts/Makefile.am
+++ b/scripts/Makefile.am
@@ -22,9 +22,8 @@ bin_SCRIPTS = getalign extract-bgrnd-coord weblogo-display
 nodist_python_PYTHON = mapping.py
 
 CLEANFILES = $(bin_SCRIPTS)
-EXTRA_DIST = getalign.py.in mapping.py.in extractbackground.py.in\
-			 weblogo-display.py.in emf2fasta.pyx.in emf2fasta.pyx\
-			 emf2fasta.c.in
+EXTRA_DIST = getalign.py.in mapping.py.in weblogo-display.py.in\
+			 emf2fasta.pyx.in emf2fasta.pyx emf2fasta.c.in
 
 do_subst = $(SED) -e 's,[@]PYTHON[@],$(PYTHON),g'\
 		       -e 's,[@]pythondir[@],$(pythondir),g'\
