--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -15,23 +15,27 @@
 # GNU General Public License for more details.
 # 
 # You should have received a copy of the GNU General Public License
-# along with Imogene; see the file COPYING  If not, see <http://www.gnu.org/licenses/>.
+# along with Imogene; see the file COPYING  If not, see
+# <http://www.gnu.org/licenses/>.
 
-BUILT_SOURCES = extract.help distinfo.help genmot.help display.help
-
-extract.help: $(top_builddir)/src/imogene
-	$(top_builddir)/src/imogene extract --help > $@
-
-distinfo.help: $(top_builddir)/src/imogene
-	$(top_builddir)/src/imogene distinfo --help > $@
-
-genmot.help: $(top_builddir)/src/imogene
-	$(top_builddir)/src/imogene genmot --help > $@
-
-display.help: $(top_builddir)/src/imogene
-	$(top_builddir)/src/imogene display --help > $@
+## BUILT_SOURCES = extract.help distinfo.help genmot.help display.help
+## 
+## extract.help: ../src/imogene
+## 	../src/imogene extract --help > $@
+## 
+## distinfo.help: ../src/imogene
+## 	../src/imogene distinfo --help > $@
+## 
+## genmot.help: ../src/imogene
+## 	../src/imogene genmot --help > $@
+## 
+## display.help: ../src/imogene
+## 	../src/imogene display --help > $@
 
 AM_MAKEINFOHTMLFLAGS = --no-split
 
 info_TEXINFOS = imogene.texi
-imogene_TEXINFOS = fdl.texi extract.texi extract.help distinfo.texi distinfo.help genmot.texi genmot.help install.texi display.texi display.help test.texi mobyle.texi imogene-mob.png
+imogene_TEXINFOS = fdl.texi extract.texi distinfo.texi genmot.texi\
+				   install.texi display.texi test.texi mobyle.texi\
+				   imogene-mob.png imogene-mob.eps
+#				   extract.help distinfo.help genmot.help display.help 
